2004-12-01  Marc Singer  <elf@buici.com>

	* README: New README(s) in preparation to release the source.

2004-11-17  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-nor.c (nor_write): Fixed a buglet in
	buffered writes where the size of the write was incorrect in some
	edge cases.

	* src/mach-lh7952x/drv-cpld-spi.c: Added cpld-spi drivers for
	configuration EEPROM and for the MAC EEPROM.

	* src/mach-lh7952x/drv-emac.c (emac_read_mac): Fixed the EEPROM
	code.
	(cmd_emac): Removed eeprom specifics into another driver.

	* src/lib/dump.c (dump): Correct bug offset to rgb.

2004-11-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Ethernet MAC maintenance
	function as well as interface initialization.

	* src/lib/dump.c (dump): Factored the dump code into a library
	function.

2004-11-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-nor.c (nor_write): Implementing buffered
	write.  It's about 16 times as fast.  Will leave other code for
	the time being since it is smaller by about 260 bytes.

	* First release, 1.0.
